test/libsolidity/syntaxTests/errors/anonymous.sol
error E() anonymous;
// ----
// ParserError 2314: (10-19='anonymous'): Expected ';' but got 'anonymous'
